added raw filter to the linkText so that we could pass HTML to the share link template

--- a/Resources/views/SocialLinks/socialLink.html.twig
+++ b/Resources/views/SocialLinks/socialLink.html.twig
@@ -2,5 +2,5 @@
 <a href="{{ socialUrl }}"
 {%- for key, attribute in attributes %}
  {{ key }}="{{ attribute }}"
-{%- endfor %}>{{ linkText }}</a>
+{%- endfor %}>{{ linkText | raw('html') }}</a>
 {% endspaceless %}
